--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -18,7 +18,7 @@ jobs:
           java-version: 18.x
           cache: gradle
       - name: Test and build
-        run: ./gradlew build
+        run: ./gradlew clean build
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
