--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -16,7 +16,6 @@ jobs:
         with:
           distribution: temurin
           java-version: 18.x
-          cache: gradle
       - name: Test and build
         run: ./gradlew clean build
       - uses: docker/login-action@v2
@@ -26,6 +25,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: ${{ env.DOCKER_IMAGE }}
   deploy:
