--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -16,8 +16,9 @@ jobs:
         with:
           distribution: temurin
           java-version: 18.x
+          caching: gradle
       - name: Test and build
-        run: ./gradlew clean build
+        run: ./gradlew build
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
