Remove access policies

--- a/.nais/labs.yaml
+++ b/.nais/labs.yaml
@@ -20,8 +20,8 @@ spec:
     path: isready
   ingresses:
     - https://samtykke-api.labs.nais.io
-  accessPolicy:
-    inbound:
-      rules:
-        - application: samtykke-citizen
-        - application: samtykke-employee
+  #accessPolicy:
+  #  inbound:
+  #    rules:
+  #      - application: samtykke-citizen
+  #      - application: samtykke-employee
