Add workaround for labs deployment

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -38,6 +38,7 @@ jobs:
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          DEPLOY_SERVER: deploy.nais.io:443
           CLUSTER: labs-gcp
           RESOURCE: .nais/labs.yaml
           VAR: image=${{ env.DOCKER_IMAGE }}
