Add step for deploying to dev-gcp

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -29,7 +29,7 @@ jobs:
           context: .
           push: true
           tags: ${{ env.DOCKER_IMAGE }}
-  deploy:
+  deploy-to-labs:
     name: Deploy to labs-gcp
     needs: build
     runs-on: ubuntu-latest
@@ -41,4 +41,16 @@ jobs:
           DEPLOY_SERVER: deploy.nais.io:443
           CLUSTER: labs-gcp
           RESOURCE: .nais/labs.yaml
+          VAR: image=${{ env.DOCKER_IMAGE }}
+  deploy-to-dev:
+    name: Deploy to dev-gcp
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/dev.yaml
           VAR: image=${{ env.DOCKER_IMAGE }}
