--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -25,3 +25,9 @@ spec:
     requests:
       cpu: 200m
       memory: 256Mi
+  gcp:
+    sqlInstances:
+      - type: POSTGRES_14
+        databases:
+          - name: samtykke
+            envVarPrefix: DB
