Add inbound rules

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -31,3 +31,8 @@ spec:
         databases:
           - name: samtykke
             envVarPrefix: DB
+  accessPolicy:
+    inbound:
+      rules:
+        - application: samtykke-employee
+        - application: samtykke-citizen
