Add inbound rule to nais config

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -46,6 +46,7 @@ spec:
       rules:
         - application: samtykke-employee
         - application: samtykke-citizen
+        - application: samtykke-cronjob
     outbound:
       rules:
         - application: samtykke-pdfgen
