--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -3,12 +3,13 @@ name: Test and deploy API
 on:
   push:
     branches: [main]
-env:
-  DOCKER_IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
 
 jobs:
   build:
-    name: Build and push Docker container
+    name: Build, push and deploy Docker container
+    permissions:
+      contents: "read"
+      id-token: "write"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,38 +20,15 @@ jobs:
           caching: gradle
       - name: Test and build
         run: ./gradlew build
-      - uses: docker/login-action@v2
+      - uses: nais/docker-build-push@v0
+        id: docker-push
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ env.DOCKER_IMAGE }}
-  deploy-to-labs:
-    name: Deploy to labs-gcp
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          DEPLOY_SERVER: deploy.nais.io:443
-          CLUSTER: labs-gcp
-          RESOURCE: .nais/labs.yaml
-          VAR: image=${{ env.DOCKER_IMAGE }}
-  deploy-to-dev:
-    name: Deploy to dev-gcp
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+          team: team-researchops
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
           RESOURCE: .nais/dev.yaml
-          VAR: image=${{ env.DOCKER_IMAGE }}
+          VAR: image=${{ steps.docker-push.outputs.image }}
